--- a/.github/workflows/.gitlab-ci.yml
+++ b/.github/workflows/.gitlab-ci.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACTION_SECRETS }}
         with:
-          # 部署到 gh-pages 分支
-          target_branch: gh-pages
+          # 部署到 master 分支
+          target_branch: master
           # 部署目录为 VuePress 的默认输出目录
           build_dir: docs/.vuepress/dist
