--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "get:filefoler": "node ./get-filefolder"
   },
   "devDependencies": {
-    "vuepress": "1.8.2"
+    "vuepress": "^1.8.2"
   }
 }
