--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -34,9 +34,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       # 如果缓存没有命中，安装依赖
-      # - name: Install dependencies
-      #   if: steps.yarn-cache.outputs.cache-hit != 'true'
-      #   run: yarn install
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn --frozen-lockfile
 
       # 运行构建脚本
       - name: Build VuePress site
