--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -45,7 +45,7 @@ jobs:
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
-        uses: sundongzi/sundongzi.github.io@v2
+        uses: crazy-max/ghaction-github-pages@v2
         env:
           GITHUB_TOKEN: ${{ secrets.ACTION_SECRETS }}
         with:
