--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -45,8 +45,7 @@ jobs:
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v2
+        uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           # 部署到 gh-pages 分支
           target_branch: master
