--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -48,7 +48,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           # 部署到 gh-pages 分支
-          branch: master
+          BRANCH: master
           # 部署目录为 VuePress 的默认输出目录
-          folder: docs/.vuepress/dist
-          ssh-key: ${{ secrets.ACTION_SECRETS }}
+          build_dir: docs/.vuepress/dist
+          ACCESS_TOKEN: ${{ secrets.ACTION_SECRETS }}
