--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -50,5 +50,5 @@ jobs:
           # 部署到 gh-pages 分支
           BRANCH: master
           # 部署目录为 VuePress 的默认输出目录
-          build_dir: docs/.vuepress/dist
+          FOLDER: docs/.vuepress/dist
           ACCESS_TOKEN: ${{ secrets.ACTION_SECRETS }}
