--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "author": "sundong <sundong@idss-cn.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
+    "docs:dev": "vuepress dev docs --temp .temp",
     "docs:build": "vuepress build docs --no-cache",
     "deploy-gh": "GH=1 yarn docs:build && bash deploy-gh.sh",
     "get:filefoler": "node ./get-filefolder"
   },
   "devDependencies": {
-    "vuepress": "^1.8.2"
-  }
+    "vuepress": "1.8.2"
+  },
+  "dependencies": {}
 }
