--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,7 +1,7 @@
 name: docs # workflow名称
 
 on: # 触发条件
-  # 每当 push 到 main 分支时触发部署
+  # 每当 push 到 master 分支时触发部署
   push:
     branches: [master]
   # 是否手动触发部署
